--- a/map.html
+++ b/map.html
@@ -117,10 +117,10 @@
         <div class="container">
           <div class="filterDiv fast-food"><a href="#knibal">K-Nibal</a></div>
           <div class="filterDiv bar"><a href="#mascara">Máscara</a></div>
-          <div class="filterDiv cafe">Café del poeta</div>
-          <div class="filterDiv cafe">Emporio la Rosa</div>
-          <div class="filterDiv bar rest">Cinzano</div>
-          <div class="filterDiv rest">Nazca</div>
+          <div class="filterDiv cafe"><a href="#cafeDelPoeta">Café del poeta</a></div>
+          <div class="filterDiv cafe"><a href="#emporioLaRosa">Emporio la Rosa</a></div>
+          <div class="filterDiv bar rest"><a href="#cinzano">Cinzano</a></div>
+          <div class="filterDiv rest"><a href="#nazca">Nazca</a></div>
    
         </div>
         
